# ChangeLog for games-puzzle/trimines
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-puzzle/trimines/ChangeLog,v 1.11 2015/02/11 07:14:24 mr_bones_ Exp $

  11 Feb 2015; Michael Sterrett <mr_bones_@gentoo.org> trimines-1.3.0.ebuild:
  allow mirroring

  11 Feb 2015; Michael Sterrett <mr_bones_@gentoo.org> trimines-1.3.0.ebuild:
  use the mirrors to fetch

  11 Feb 2015; Michael Sterrett <mr_bones_@gentoo.org> trimines-1.3.0.ebuild:
  EAPI=5

  16 Apr 2014; Ulrich Müller <ulm@gentoo.org> trimines-1.3.0.ebuild:
  Fix LICENSE, add mirror and bindist restrictions, bug 505726.

  23 Dec 2011; Agostino Sarubbo <ago@gentoo.org> trimines-1.3.0.ebuild:
  Added ~amd64 and missing RDEPEND line, wrt bug #293219

  13 Oct 2010; Michael Sterrett <mr_bones_@gentoo.org>
  trimines-1.3.0.ebuild, +files/trimines-1.3.0-gentoo.patch:
  tidy; add use deps; fix some compile warnings

  05 Oct 2010; Tupone Alfredo <tupone@gentoo.org> trimines-1.3.0.ebuild:
  Respect LDFLAGS. Bug #337111 by flameeyes@gentoo.org

  16 Nov 2009; Mounir Lamouri <volkmar@gentoo.org> trimines-1.3.0.ebuild:
  Keywording for ppc, bug 293220

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

*trimines-1.3.0 (18 May 2006)

  18 May 2006; Michael Sterrett <mr_bones_@gentoo.org>
  +trimines-1.3.0.ebuild:
  version bump

*trimines-1.2.1 (30 Apr 2006)

  30 Apr 2006; Michael Sterrett <mr_bones_@gentoo.org> +metadata.xml,
  +trimines-1.2.1.ebuild:
  initial commit - ebuild submitted by Cristiano Chiucchiolo via bug #131605