@@ -1,5 +1,22 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX trimines-1.3.0-gentoo.patch 2619 SHA256 1a946cef939015edc58d64fa2e1792d515dff66ad4e6b7948efffa3f7952ebcf SHA512 3e3efe4e70b02b279da37e7e648bca0b482ebee7709eca2b252193a7fc5b029d8bf48fafcfe7a8498a1b9dcfbd24eabed64543d51dfddcf16d055b392d835ace WHIRLPOOL 58e17839c5b11462f6fb1bb3e19b56ddcd9f4810598bce0037e45f133e57fcebcee38a4ef2b91f3824620e173ef37a282c0a608461b619c8fd0f0ef4b3611344
 DIST trimines-1.3.0.tar.gz 78590 SHA256 87e6d48b474cf8097c0fac83f700fc098f8f4e65240ceaf0da81b5e644f7d65a SHA512 9a9c5e741460eff29a024aab85ee00d7ccc6111460dab50a8036c638afb9185fb6ffa728914bda7963a80b9b70c7a5f4a1125e08ddf4d90e220d9cfe6683548e WHIRLPOOL 9a5f6f59e957fd829fa4c9058d00d29f1d5549694e7734f49f56b4ccfaf144c3bae824d0bb378251ebd5004fcbb3fd510d83492d326bbdabc38b17b2e3063584
-EBUILD trimines-1.3.0.ebuild 844 SHA256 b462b9351917809dbf2c55ca25872d185cca9677e75d8d64affeb5aed834196c SHA512 89cab5c7f0e8e436b30663dc3c48214d0790f67360504fb7985d0f9424b3c0eade2c47ed121d92d9bcb20aa461802853c012c63117379fc50af1f1f787c191dd WHIRLPOOL f4351d8be06fd422c1fea1a1370b6a8705e923fed43a40c5242d7523656e4145addd0ad3619895b7a26bce5f37e9ed48f6d5cbbdc6856407c0bd1ba93754a3c1
-MISC ChangeLog 1601 SHA256 60c51c267c1994271842b01803aab0d0aa98b02d94f39fb73b4c7cefc631399c SHA512 945829afcc0c3d0b01e4cafa1c1d084a174467249a0c9be9aec9a3bb14f5186acd1793a9c165752c5832c2284c5e6d4de5d925b408c15783f0b8839201867f64 WHIRLPOOL 5ef3f3355a3bdba1ad2402a80b352923d7bd27dc929ce086cc80d1676078bdcceb009c88d1c7522f711837e662df4b899c5f2ec7f1f526b829665fe51d995840
+EBUILD trimines-1.3.0.ebuild 884 SHA256 54aa6dc1a1b2f6b771d2e4866b23ef65d457fe95bb8447f072936e74ff9a6e6e SHA512 ea941a438003b1f3ce3bf85f25d3bc7650c439cf6afe8cdf16f015e2d4f9b37a51b5688acf06c3419dd2cc214903e2c9e60e80bb3e960465b4025939d9fba5bd WHIRLPOOL 20364591e02f202c1c69476603f867d32fed5a0ae0afe6fe4bff9e9019689a8a820ef093039f306256f80a099c57e6c853474b1de57989634821090f92013209
+MISC ChangeLog 1742 SHA256 7714a05b569f2a1fe1945786aaa6da5efb576258902d43364ba27a64f8f7b2c6 SHA512 177bfde94da6cc8e24db12656a297fe96db1e9f28d7c0ff281b08a7cb77b64d167b99e6d417a1a01404d98b0c13a9b1123d35488fdf1c3dc89a4b0ac45d5932c WHIRLPOOL 815f8bebcbbe6e86297e379366286c54bc2cda1483f229ca6b3b964327d18242e0cf12607860de6400dda404d1d79e434aeb02561871abdbe4066820b79eec59
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQGcBAEBCAAGBQJU27P1AAoJEJQzkH1pP7W4LAEL/0dsnhCUIQOwpmLtE1KlWCyw
+o8GXRImJBvMXOSnIDax+NuemlYw1zHntR/yWYyjZy4an5xWQUkqv1x9iJJ5IAH93
+hox6/Rjp5CFn5SFtw0VjHSujOxggSSUJVCgOHMO36TwS8At31rSwpJP2Sv4Th64L
+e+L9Ac6IGORq6cHfjoEAm06jt18xBKPgzFqpK2E/jGsjsxPLtZ5DIixDsFvN+bIM
+DX4X5dKo98YBUpy12grDmpolNKtwR5draT4WfJLhwjzl5NOYCp95Z4SP3iUXWMpW
+vYp3KGS2A9fC7DCHmrDv2FXg+LJ4mBWbD+wK7Gx0tnPEiU4qRtAS79Tg9cBSqSLe
+BrpECFhWxontEQMYrpzIlQLkh+c5Zyhtwsb5SCvthyyQrUrapLurJoLy3/Rl+tpQ
+SyQuHH4NNtEPbv9RThML0JLN58c/W0zV3Amwat4YwCL6eFC9FxMjqNo9sPQEb5Qw
+Tf8FcuOojPwCZ183o7eJoUBNnFTP/HuJNnEWx4ps+g==
+=HJ8p
+-----END PGP SIGNATURE-----
