@@ -1,18 +1,19 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-puzzle/trimines/trimines-1.3.0.ebuild,v 1.10 2015/02/11 07:14:24 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-puzzle/trimines/trimines-1.3.0.ebuild,v 1.11 2015/02/11 19:49:49 ulm Exp $
 
 EAPI=5
 inherit eutils games
 
 DESCRIPTION="A mine sweeper game that uses triangles instead of squares"
 HOMEPAGE="http://www.freewebs.com/trimines/"
-SRC_URI="mirror://gentoo/${P}.tar.gz"
+SRC_URI="http://www.gnu-darwin.org/distfiles/${P}.tar.gz"
 
 LICENSE="all-rights-reserved"
 SLOT="0"
 KEYWORDS="~amd64 ~ppc x86"
 IUSE=""
+RESTRICT="mirror bindist"
 
 DEPEND="media-libs/libsdl[video]"
 RDEPEND="${DEPEND}"
